Implement unified calendar with role-based access and Google OAuth flow
- Updated access code verification to redirect all users to Google OAuth
- Modified LoginPage to handle guest/user/admin roles uniformly
- Enhanced CalendarPage with role-based permissions and direct editing
- Added permission checks for booking creation, editing, and deletion
- Implemented MongoDB Atlas integration for password verification
- Fixed server configuration to run on single port (5000)
- Updated API service to use correct port configuration
- Added role display in calendar header with permission indicators

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Studio booking calendar application with role-based access",
   "main": "server/dist/server.js",
   "scripts": {
-    "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
+    "dev": "npm run build:dev && cd server && npm run dev",
+    "dev:watch": "concurrently \"npm run client:watch\" \"cd server && npm run dev\"",
+    "client:watch": "webpack --config webpack.dev.js --watch",
+    "dev:single": "npm run build:dev && cd server && npm run dev",
     "server:dev": "cd server && npm run dev",
     "client:dev": "webpack serve --config webpack.dev.js --hot",
     "server": "cd server && npm run dev",
