--- a/server/.env.example
+++ b/server/.env.example
@@ -20,7 +20,17 @@ FRONTEND_URL=http://localhost:3000
 # Server Port
 PORT=5000
 
-# Password Configuration (Change these!)
-GUEST_PASSWORD=studio_guest_2024
-USER_PASSWORD=deadlizard_user_2024
-ADMIN_PASSWORD=deadlizard_admin_2024
+# Access Code Configuration
+# Choose ONE method below for each access level:
+
+# Method 1: Custom passwords (hashed with bcrypt) - RECOMMENDED for production
+# Generate these with: npm run hash-passwords
+# GUEST_ACCESS_CODE_HASH=$2b$12$your-hashed-guest-password
+# USER_ACCESS_CODE_HASH=$2b$12$your-hashed-user-password
+# ADMIN_ACCESS_CODE_HASH=$2b$12$your-hashed-admin-password
+
+# Method 2: Custom passwords (plaintext) - OK for development
+# Use your own memorable passwords
+GUEST_ACCESS_CODE=StudioGuest2024!
+USER_ACCESS_CODE=DeadLizardBand!
+ADMIN_ACCESS_CODE=StudioAdmin2024!
