--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,11 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "start:prod": "npm run build && npm run start",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "generate-codes": "ts-node scripts/generateAccessCodes.ts",
+    "hash-passwords": "ts-node scripts/hashPasswords.ts",
+    "quick-setup": "ts-node scripts/hashPasswords.ts --quick",
+    "security-help": "cat ../SECURITY.md"
   },
   "keywords": [
     "express",
@@ -20,11 +24,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/express-rate-limit": "^5.1.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.8.1",
+    "express-rate-limit": "^6.11.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
@@ -36,7 +41,7 @@
     "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
