🚀 Consolidate to single-port deployment and enhance type safety
✨ Port Unification:
- Configure application to run entirely on port 5000 (backend + frontend)
- Update server default port from 3000 to 5000 for unified deployment
- Remove dual-port serve configuration for streamlined development
- Update CORS origin to match consolidated port setup

📦 Build Process Optimization:
- Simplify package.json scripts to eliminate separate serve processes
- Remove redundant client/server split scripts for cleaner workflow
- Add start:dev script for unified development deployment
- Streamline build process to use Express static file serving

🔧 Type Safety Improvements:
- Update DayDetailView component to use proper UserRole enum instead of strings
- Add missing BookingSlot interface properties (_id, artistName, status, priority)
- Enhance type consistency across AdminPage and GuestCalendarPage components
- Fix TypeScript interface compliance for better development experience

🏗️ Architecture Enhancement:
- Configure Express server to handle both API routes and static React files
- Implement proper static file serving in development environment
- Maintain role-based access control with improved type checking
- Ensure calendar functionality works with consolidated port setup

🎯 Deployment Ready:
- Single port deployment eliminates port conflicts and simplifies hosting
- Unified development workflow matches production deployment pattern
- Maintains all existing functionality while improving maintainability
- Ready for containerization and production deployment

--- a/package.json
+++ b/package.json
@@ -7,16 +7,13 @@
     "dev": "npm run build:dev && cd server && npm run dev",
     "dev:watch": "concurrently \"npm run client:watch\" \"cd server && npm run dev\"",
     "client:watch": "webpack --config webpack.dev.js --watch",
-    "dev:single": "npm run build:dev && cd server && npm run dev",
     "server:dev": "cd server && npm run dev",
-    "client:dev": "webpack serve --config webpack.dev.js --hot",
-    "server": "cd server && npm run dev",
-    "client": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "build:dev": "webpack --config webpack.dev.js",
     "build:server": "cd server && npm run build",
     "build:all": "npm run build:server && npm run build",
-    "start": "npm run build:all && concurrently \"cd server && npm run start\" \"serve -s dist\"",
+    "start": "npm run build:all && cd server && npm run start",
+    "start:dev": "npm run build:dev && cd server && npm run dev",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "install-server": "cd server && npm install",
