--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
     "type-check:watch": "npm run type-check -- --watch",
     "install-server": "cd server && npm install",
     "install-client": "npm install",
-    "install-all": "npm run install-server && npm run install-client"
+    "install-all": "npm run install-server && npm run install-client",
+    "deploy": "./deploy.sh",
+    "status": "./status.sh",
+    "setup-secrets": "./setup-secrets.sh",
+    "pm2:start": "pm2 start ecosystem.config.json --env production",
+    "pm2:stop": "pm2 stop deadlizard-calendar",
+    "pm2:restart": "pm2 restart deadlizard-calendar",
+    "pm2:logs": "pm2 logs deadlizard-calendar"
   },
   "keywords": [
     "mern",
