Fix webpack output directory: Change from dist to public for GitHub Actions compatibility

--- a/server/.env.production.template
+++ b/server/.env.production.template
@@ -13,14 +13,14 @@ JWT_SECRET=your-super-secure-jwt-secret-key-here-change-this-in-production
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
-GOOGLE_CALLBACK_URL=https://yourdomain.com/api/auth/google/callback
+GOOGLE_CALLBACK_URL=https://deadlizardjam.online/api/auth/google/callback
 
 # Session Configuration
 SESSION_SECRET=your-super-secure-session-secret-here-change-this-in-production
 
 # CORS Configuration
-FRONTEND_URL=https://yourdomain.com
-ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+FRONTEND_URL=https://deadlizardjam.online
+ALLOWED_ORIGINS=https://deadlizardjam.online,https://www.deadlizardjam.online
 
 # Logging
 LOG_LEVEL=info
