--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -155,14 +155,7 @@ jobs:
         with:
           name: deployment-package
 
-      - name: 🔐 Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: 🔑 Setup SSH
+      - name:  Setup SSH
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.AWS_SSH_KEY }}" > ~/.ssh/aws-key.pem
