🔧 Fix deployment archive: Include systemd service and nginx config
- Add deadlizard-calendar.service to deployment package
- Add nginx-deadlizard.conf to deployment package
- Add tar contents listing for debugging
- This should fix the missing archive error in deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -123,9 +123,14 @@ jobs:
           cp package*.json deployment-package/
           cp ecosystem.config.json deployment-package/
           cp deploy.sh deployment-package/
+          cp deadlizard-calendar.service deployment-package/
+          cp nginx-deadlizard.conf deployment-package/
           
           # Create archive
           tar -czf dead-lizard-calendar-${{ needs.check-changes.outputs.commit-sha }}.tar.gz -C deployment-package .
+          
+          echo "📊 Deployment package contents:"
+          tar -tzf dead-lizard-calendar-${{ needs.check-changes.outputs.commit-sha }}.tar.gz
           
           echo "📊 Deployment package size:"
           ls -lh *.tar.gz
