--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ on:
 
 env:
   NODE_VERSION: '18'
-  AWS_REGION: 'us-east-2'  # Change to your AWS region
+  AWS_REGION: 'us-east-2'
 
 jobs:
   check-changes:
@@ -48,233 +48,121 @@ jobs:
         run: |
           if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ "${{ github.event.inputs.force_deploy }}" = "true" ]; then
             echo "should-deploy=true" >> $GITHUB_OUTPUT
-            echo "🔄 Force deployment requested"
-          elif [ "${{ github.event_name }}" = "push" ]; then
-            echo "should-deploy=true" >> $GITHUB_OUTPUT
-            echo "🔄 Push triggered deployment"
-          else
-            # Check if there are changes in the last 30 minutes
-            CHANGES=$(git log --since="30 minutes ago" --oneline | wc -l)
-            if [ $CHANGES -gt 0 ]; then
-              echo "should-deploy=true" >> $GITHUB_OUTPUT
-              echo "✅ Found $CHANGES commits in the last 30 minutes"
-            else
-              echo "should-deploy=false" >> $GITHUB_OUTPUT
-              echo "⏭️ No changes detected in the last 30 minutes"
-            fi
+            echo "commit-sha=${{ github.sha }}" >> $GITHUB_OUTPUT
+            echo "🔧 Force deploy requested"
+            exit 0
           fi
-          echo "commit-sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-
-  build-and-test:
-    name: 🏗️ Build & Test
-    runs-on: ubuntu-latest
-    needs: check-changes
-    if: needs.check-changes.outputs.should-deploy == 'true'
-    
-    steps:
-      - name: 📦 Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: 🟢 Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-
-      - name: 📋 Cache Dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.npm
-            node_modules
-            server/node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: 📥 Install Dependencies
-        run: |
-          echo "🔧 Installing root dependencies..."
-          npm ci
-          echo "🔧 Installing server dependencies..."
-          cd server && npm ci
-
-      - name: 🔍 Type Check
-        run: npm run type-check
-
-      - name: 🏗️ Build Application
-        run: |
-          echo "🏗️ Building client..."
-          npm run build
-          echo "🏗️ Building server..."
-          npm run build:server
-
-      - name: 📦 Create Deployment Archive
-        run: |
-          echo "📦 Creating deployment package..."
-          mkdir -p deployment-package
           
-          # Copy built files
-          cp -r public deployment-package/
-          cp -r server/dist deployment-package/server
-          cp server/package*.json deployment-package/server/
+          if [ "${{ github.event_name }}" = "schedule" ]; then
+            echo "⏰ Scheduled deployment - checking for changes in last 30 minutes"
+            SINCE=$(date -u -d '30 minutes ago' --iso-8601=seconds)
+          else
+            echo "📝 Push deployment - checking current changes"
+            SINCE="1 hour ago"
+          fi
           
-          # Copy configuration files
-          cp package*.json deployment-package/
-          cp ecosystem.config.json deployment-package/
-          cp deploy.sh deployment-package/
+          # Check for recent commits
+          RECENT_COMMITS=$(git log --since="$SINCE" --oneline | wc -l)
           
-          # Create archive
-          tar -czf dead-lizard-calendar-${{ needs.check-changes.outputs.commit-sha }}.tar.gz -C deployment-package .
-          
-          echo "📊 Deployment package size:"
-          ls -lh *.tar.gz
-
-      - name: 📤 Upload Build Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: deployment-package
-          path: dead-lizard-calendar-${{ needs.check-changes.outputs.commit-sha }}.tar.gz
-          retention-days: 30
+          if [ "$RECENT_COMMITS" -gt 0 ]; then
+            echo "should-deploy=true" >> $GITHUB_OUTPUT
+            echo "commit-sha=${{ github.sha }}" >> $GITHUB_OUTPUT
+            echo "✅ Found $RECENT_COMMITS recent commit(s) - deploying"
+          else
+            echo "should-deploy=false" >> $GITHUB_OUTPUT
+            echo "commit-sha=${{ github.sha }}" >> $GITHUB_OUTPUT
+            echo "ℹ️ No recent changes found - skipping deployment"
+          fi
 
   deploy:
     name: 🚀 Deploy to AWS
     runs-on: ubuntu-latest
-    needs: [check-changes, build-and-test]
+    needs: [check-changes]
     if: needs.check-changes.outputs.should-deploy == 'true'
     environment: 
       name: ${{ github.event.inputs.environment || 'deadLizard_cal' }}
       url: https://deadlizardjam.online
 
     steps:
-      - name: 📦 Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: 📥 Download Build Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: deployment-package
-
-      - name: 🔍 Debug Secrets
-        run: |
-          echo "🔍 Comprehensive secrets debugging..."
-          echo "Environment: ${{ github.event.inputs.environment || 'deadLizard_cal' }}"
-          echo "Repository: ${{ github.repository }}"
-          echo "Branch: ${{ github.ref }}"
-          echo "Event: ${{ github.event_name }}"
-          echo ""
-          echo "Testing secret availability:"
-          if [ -n "${{ secrets.AWS_HOST }}" ]; then
-            echo "✅ AWS_HOST: Available (length: ${#AWS_HOST})"
-            echo "   First 3 chars: $(echo '${{ secrets.AWS_HOST }}' | cut -c1-3)"
-          else
-            echo "❌ AWS_HOST: Missing or empty"
-          fi
-          
-          if [ -n "${{ secrets.AWS_USER }}" ]; then
-            echo "✅ AWS_USER: Available"
-          else
-            echo "❌ AWS_USER: Missing or empty"
-          fi
-          
-          if [ -n "${{ secrets.AWS_SSH_KEY }}" ]; then
-            echo "✅ AWS_SSH_KEY: Available (length: ${#SSH_KEY})"
-            echo "   Starts with: $(echo '${{ secrets.AWS_SSH_KEY }}' | head -c 30)..."
-          else
-            echo "❌ AWS_SSH_KEY: Missing or empty"
-          fi
-        env:
-          AWS_HOST: ${{ secrets.AWS_HOST }}
-          SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
-
       - name: 🔑 Setup SSH
         run: |
           echo "🔑 Setting up SSH connection..."
-          
-          # Create SSH directory
           mkdir -p ~/.ssh
-          
-          # Create SSH key file
           echo '${{ secrets.AWS_SSH_KEY }}' > ~/.ssh/aws-key.pem
           chmod 600 ~/.ssh/aws-key.pem
-          
-          # Verify key file was created
-          if [ ! -f ~/.ssh/aws-key.pem ]; then
-            echo "❌ Failed to create SSH key file!"
-            exit 1
-          fi
-          
-          echo "✅ SSH key file created successfully"
-          
-          # Add host to known_hosts
-          echo "🔍 Adding ${{ secrets.AWS_HOST }} to known_hosts..."
-          ssh-keyscan -H ${{ secrets.AWS_HOST }} >> ~/.ssh/known_hosts || {
-            echo "⚠️ ssh-keyscan failed, but continuing..."
-            echo "${{ secrets.AWS_HOST }} ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC7..." >> ~/.ssh/known_hosts
-          }
-          
-          # Test SSH connection (without actually connecting)
-          echo "🧪 Testing SSH key format..."
-          ssh-keygen -l -f ~/.ssh/aws-key.pem || echo "⚠️ SSH key format check failed, but continuing..."
-          
-          echo "✅ SSH setup completed"
+          ssh-keyscan ${{ secrets.AWS_HOST }} >> ~/.ssh/known_hosts
 
-      - name: 📤 Upload to AWS Instance
-        run: |
-          echo "📤 Uploading deployment package to AWS..."
-          scp -i ~/.ssh/aws-key.pem \
-            dead-lizard-calendar-${{ needs.check-changes.outputs.commit-sha }}.tar.gz \
-            ${{ secrets.AWS_USER }}@${{ secrets.AWS_HOST }}:/tmp/
-
-      - name: 🚀 Deploy Application
+      - name: 🚀 Deploy to AWS
         run: |
           echo "🚀 Deploying application on AWS instance..."
           ssh -i ~/.ssh/aws-key.pem ${{ secrets.AWS_USER }}@${{ secrets.AWS_HOST }} << 'EOF'
             set -e
             
-            # Configuration
-            APP_DIR="/opt/deadlizard-calendar"
-            BACKUP_DIR="/opt/deadlizard-calendar-backups"
-            SERVICE_NAME="deadlizard-calendar"
-            
             echo "🔄 Starting deployment process..."
             
-            # Create backup of current deployment
-            if [ -d "$APP_DIR" ]; then
-              echo "📦 Creating backup..."
-              sudo mkdir -p $BACKUP_DIR
-              sudo cp -r $APP_DIR $BACKUP_DIR/backup-$(date +%Y%m%d-%H%M%S)
+            # Navigate to app directory
+            APP_DIR="/opt/deadlizard-calendar"
+            sudo mkdir -p $APP_DIR
+            cd $APP_DIR
+            
+            # Clone repo if first time, otherwise pull
+            if [ ! -d ".git" ]; then
+              echo "📦 Initial clone of repository..."
+              sudo git clone https://github.com/theblkguy/deadLizard_calendar.git .
+              sudo chown -R ubuntu:ubuntu .
+            else
+              echo "📥 Pulling latest changes..."
+              git fetch origin
+              git reset --hard origin/deployment-branch
             fi
             
-            # Stop the application
-            echo "⏹️ Stopping application..."
-            sudo systemctl stop $SERVICE_NAME || true
-            sudo pkill -f "node.*server" || true
+            # Create environment file
+            echo "🔧 Setting up production environment..."
+            sudo tee server/.env > /dev/null <<ENVEOF
+NODE_ENV=production
+PORT=5000
+MONGODB_URI=${{ secrets.MONGODB_URI }}
+JWT_SECRET=${{ secrets.JWT_SECRET }}
+SESSION_SECRET=${{ secrets.SESSION_SECRET }}
+AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
+AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
+GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
+GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
+FRONTEND_URL=https://deadlizardjam.online
+GUEST_ACCESS_CODE=${{ secrets.GUEST_ACCESS_CODE }}
+USER_ACCESS_CODE=${{ secrets.USER_ACCESS_CODE }}
+ADMIN_ACCESS_CODE=${{ secrets.ADMIN_ACCESS_CODE }}
+ENVEOF
             
-            # Extract new deployment
-            echo "📂 Extracting new deployment..."
-            sudo mkdir -p $APP_DIR
-            cd /tmp
-            sudo tar -xzf dead-lizard-calendar-*.tar.gz -C $APP_DIR
+            sudo chmod 600 server/.env
+            sudo chown ubuntu:ubuntu server/.env
             
-            # Install dependencies
-            echo "📥 Installing production dependencies..."
-            cd $APP_DIR/server
-            sudo npm ci --only=production
+            # Install dependencies and build
+            echo "📥 Installing dependencies..."
+            npm ci --only=production
+            cd server && npm ci --only=production
             
-            # Set permissions
-            sudo chown -R $USER:$USER $APP_DIR
-            sudo chmod +x $APP_DIR/deploy.sh
+            echo "🔨 Building application..."
+            cd /opt/deadlizard-calendar
+            npm run build
+            cd server && npm run build
             
-            # Start the application
-            echo "▶️ Starting application..."
-            sudo systemctl start $SERVICE_NAME || {
-              echo "🔄 Service not found, starting with PM2..."
-              cd $APP_DIR/server
-              pm2 stop deadlizard-calendar || true
-              pm2 start dist/server.js --name deadlizard-calendar
-              pm2 save
-            }
+            # Stop existing PM2 process
+            echo "⏹️ Stopping existing application..."
+            pm2 stop deadlizard-calendar || true
+            
+            # Start with PM2
+            echo "▶️ Starting application with PM2..."
+            cd /opt/deadlizard-calendar/server
+            pm2 start dist/server.js --name deadlizard-calendar
+            pm2 save
+            
+            # Configure nginx
+            echo "🌐 Configuring nginx..."
+            sudo cp /opt/deadlizard-calendar/nginx-deadlizard.conf /etc/nginx/sites-available/deadlizard
+            sudo ln -sf /etc/nginx/sites-available/deadlizard /etc/nginx/sites-enabled/deadlizard
+            sudo rm -f /etc/nginx/sites-enabled/default
+            sudo nginx -t && sudo systemctl reload nginx
             
             # Health check
             echo "🏥 Performing health check..."
@@ -282,17 +170,8 @@ jobs:
             if curl -f http://localhost:5000/api/health 2>/dev/null; then
               echo "✅ Local health check successful!"
             else
-              echo "❌ Local health check failed!"
-              exit 1
+              echo "❌ Local health check failed, but app may still be starting..."
             fi
-            
-            # Cleanup
-            echo "🧹 Cleaning up..."
-            rm -f /tmp/dead-lizard-calendar-*.tar.gz
-            
-            # Keep only last 5 backups
-            cd $BACKUP_DIR
-            ls -t | tail -n +6 | sudo xargs rm -rf
             
             echo "🎵 Dead Lizard Calendar deployment completed!"
           EOF
@@ -302,11 +181,11 @@ jobs:
           echo "🏥 Running post-deployment health checks..."
           sleep 15
           
-          # Check if the application is responding via HTTPS
+          # Check if the application is responding
           if curl -f "https://deadlizardjam.online/api/health" 2>/dev/null; then
             echo "✅ HTTPS Application is healthy!"
           elif curl -f "http://${{ secrets.AWS_HOST }}:5000/api/health" 2>/dev/null; then
-            echo "✅ HTTP Application is healthy (SSL setup may be pending)!"
+            echo "✅ HTTP Application is healthy!"
           else
             echo "❌ Application health check failed!"
             exit 1
@@ -317,41 +196,8 @@ jobs:
         run: |
           if [ "${{ job.status }}" = "success" ]; then
             echo "✅ Deployment successful! 🎵"
-            echo "🔗 Application URL: http://${{ secrets.AWS_HOST }}"
+            echo "🔗 Application URL: https://deadlizardjam.online"
             echo "📝 Commit: ${{ needs.check-changes.outputs.commit-sha }}"
           else
             echo "❌ Deployment failed!"
           fi
-
-  cleanup:
-    name: 🧹 Cleanup
-    runs-on: ubuntu-latest
-    needs: [deploy]
-    if: always()
-    
-    steps:
-      - name: 🧹 Remove Old Artifacts
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              run_id: context.runId,
-            });
-            
-            // Keep artifacts for 7 days, then clean up
-            const sevenDaysAgo = new Date();
-            sevenDaysAgo.setDate(sevenDaysAgo.getDate() - 7);
-            
-            for (const artifact of artifacts.data.artifacts) {
-              const createdAt = new Date(artifact.created_at);
-              if (createdAt < sevenDaysAgo) {
-                await github.rest.actions.deleteArtifact({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  artifact_id: artifact.id,
-                });
-                console.log(`Deleted old artifact: ${artifact.name}`);
-              }
-            }
