--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -124,8 +124,8 @@ PORT=5000
 MONGODB_URI=${{ secrets.MONGODB_URI }}
 JWT_SECRET=${{ secrets.JWT_SECRET }}
 SESSION_SECRET=${{ secrets.SESSION_SECRET }}
-AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
-AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
+AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
 GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
 GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
 FRONTEND_URL=https://deadlizardjam.online
