--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
 name: 🚀 Deploy Dead Lizard Calendar
+# Manual deployment trigger - 2025-09-01 01:15:00 UTC
 
 on:
   # Trigger deployment every 30 minutes
