Enable SSL support with self-signed certificate

--- a/nginx-deadlizard.conf
+++ b/nginx-deadlizard.conf
@@ -36,3 +36,4 @@ server {
     access_log /var/log/nginx/deadlizard_access.log;
     error_log /var/log/nginx/deadlizard_error.log;
 }
+# Force nginx SSL update
