--- a/server/.env.production
+++ b/server/.env.production
@@ -3,3 +3,10 @@ NODE_ENV=production
 PORT=5000
 MONGODB_URI=mongodb://localhost:27017/deadlizard_calendar_prod
 JWT_SECRET=your-super-secure-jwt-secret-key-change-this-in-production
+
+# Frontend URL for OAuth redirects
+FRONTEND_URL=https://deadlizardjam.online
+
+# Google OAuth (these should be set via environment variables in production)
+GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
