--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -128,11 +128,15 @@ jobs:
             echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" | sudo tee -a .env > /dev/null
             echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" | sudo tee -a .env > /dev/null
             echo "SESSION_SECRET=${{ secrets.SESSION_SECRET }}" | sudo tee -a .env > /dev/null
-            echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" | sudo tee -a server/.env > /dev/null
-            echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" | sudo tee -a server/.env > /dev/null
-            echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" | sudo tee -a server/.env > /dev/null
-            echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" | sudo tee -a server/.env > /dev/null
-            echo "FRONTEND_URL=https://deadlizardjam.online" | sudo tee -a server/.env > /dev/null
+            echo "ACCESS_CODE_GUEST=${{ secrets.GUEST_ACCESS_CODE }}" | sudo tee -a .env > /dev/null
+            echo "ACCESS_CODE_USER=${{ secrets.USER_ACCESS_CODE }}" | sudo tee -a .env > /dev/null
+            echo "ACCESS_CODE_ADMIN=${{ secrets.ADMIN_ACCESS_CODE }}" | sudo tee -a .env > /dev/null
+            echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" | sudo tee -a .env > /dev/null
+            echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" | sudo tee -a .env > /dev/null
+            echo "GOOGLE_CALLBACK_URL=https://deadlizardjam.online/api/auth/google/callback" | sudo tee -a .env > /dev/null
+            echo "FRONTEND_URL=https://deadlizardjam.online" | sudo tee -a .env > /dev/null
+            echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" | sudo tee -a .env > /dev/null
+            echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" | sudo tee -a .env > /dev/null
             echo "GUEST_ACCESS_CODE=${{ secrets.GUEST_ACCESS_CODE }}" | sudo tee -a server/.env > /dev/null
             echo "USER_ACCESS_CODE=${{ secrets.USER_ACCESS_CODE }}" | sudo tee -a server/.env > /dev/null
             echo "ADMIN_ACCESS_CODE=${{ secrets.ADMIN_ACCESS_CODE }}" | sudo tee -a server/.env > /dev/null
