Fix PM2 env_file configuration to properly load environment variables

--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -4,6 +4,7 @@
       "name": "deadlizard-calendar",
       "script": "server/dist/server.js",
       "cwd": "/opt/deadlizard-calendar",
+      "env_file": "/opt/deadlizard-calendar/.env",
       "env": {
         "NODE_ENV": "development"
       },
