--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -123,6 +123,7 @@ jobs:
             # Create environment file
             echo "🔧 Setting up production environment..."
             sudo rm -f .env
+            sudo rm -f server/.env
             echo "NODE_ENV=production" | sudo tee .env > /dev/null
             echo "PORT=5000" | sudo tee -a .env > /dev/null
             echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" | sudo tee -a .env > /dev/null
@@ -137,9 +138,6 @@ jobs:
             echo "FRONTEND_URL=https://deadlizardjam.online" | sudo tee -a .env > /dev/null
             echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" | sudo tee -a .env > /dev/null
             echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" | sudo tee -a .env > /dev/null
-            echo "GUEST_ACCESS_CODE=${{ secrets.GUEST_ACCESS_CODE }}" | sudo tee -a server/.env > /dev/null
-            echo "USER_ACCESS_CODE=${{ secrets.USER_ACCESS_CODE }}" | sudo tee -a server/.env > /dev/null
-            echo "ADMIN_ACCESS_CODE=${{ secrets.ADMIN_ACCESS_CODE }}" | sudo tee -a server/.env > /dev/null
             
             # Debug environment variables (without exposing values)
             echo "🔍 Checking environment variables..."
@@ -147,13 +145,9 @@ jobs:
             echo "USER_ACCESS_CODE length: $(echo -n "${{ secrets.USER_ACCESS_CODE }}" | wc -c)"
             echo "ADMIN_ACCESS_CODE length: $(echo -n "${{ secrets.ADMIN_ACCESS_CODE }}" | wc -c)"
             
-            # Check what's actually in the .env file
-            echo "🔍 Checking generated .env file:"
-            echo "Lines containing ACCESS_CODE:"
-            grep ACCESS_CODE server/.env || echo "No ACCESS_CODE lines found"
-            
-            sudo chmod 600 server/.env
-            sudo chown ubuntu:ubuntu server/.env
+            # Set permissions
+            sudo chmod 600 .env
+            sudo chown ubuntu:ubuntu .env
             
             # Install dependencies and build
             echo "📥 Installing dependencies..."
