--- a/nginx-deadlizard.conf
+++ b/nginx-deadlizard.conf
@@ -1,17 +1,32 @@
 server {
     listen 80;
+    listen 443 ssl;
     server_name deadlizardjam.online www.deadlizardjam.online;
+    
+    # SSL configuration (self-signed for now)
+    ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
+    ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
+    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
 
     # Gzip compression
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript;
+    gzip_proxied expired no-cache no-store private must-revalidate auth;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/javascript;
+
+    # Static files from the build
+    location /static/ {
+        alias /opt/deadlizard-calendar/public/;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
 
     # API routes - proxy to Node.js app
     location /api/ {
@@ -24,6 +39,9 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 30s;
     }
 
     # Frontend routes - serve static files first, then index.html for SPA routing
@@ -36,4 +54,3 @@ server {
     access_log /var/log/nginx/deadlizard_access.log;
     error_log /var/log/nginx/deadlizard_error.log;
 }
-# Force nginx SSL update
