--- a/nginx-deadlizard.conf
+++ b/nginx-deadlizard.conf
@@ -1,18 +1,34 @@
 server {
     listen 80;
-    listen 443 ssl;
     server_name deadlizardjam.online www.deadlizardjam.online;
     
-    # SSL configuration (self-signed for now)
-    ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
-    ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
+    # Cloudflare Flexible SSL - only listen on port 80
+    # Cloudflare handles SSL termination and forwards HTTP to origin
 
-    # Security headers
+    # Security headers (optimized for Cloudflare Flexible SSL)
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
     add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+    
+    # Trust Cloudflare headers for HTTPS detection
+    real_ip_header CF-Connecting-IP;
+    set_real_ip_from 103.21.244.0/22;
+    set_real_ip_from 103.22.200.0/22;
+    set_real_ip_from 103.31.4.0/22;
+    set_real_ip_from 104.16.0.0/13;
+    set_real_ip_from 104.24.0.0/14;
+    set_real_ip_from 108.162.192.0/18;
+    set_real_ip_from 131.0.72.0/22;
+    set_real_ip_from 141.101.64.0/18;
+    set_real_ip_from 162.158.0.0/15;
+    set_real_ip_from 172.64.0.0/13;
+    set_real_ip_from 173.245.48.0/20;
+    set_real_ip_from 188.114.96.0/20;
+    set_real_ip_from 190.93.240.0/20;
+    set_real_ip_from 197.234.240.0/22;
+    set_real_ip_from 198.41.128.0/17;
 
     # Gzip compression
     gzip on;
@@ -37,7 +53,8 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        # For Cloudflare Flexible SSL - always set to https since CF handles SSL
+        proxy_set_header X-Forwarded-Proto https;
         proxy_cache_bypass $http_upgrade;
         proxy_connect_timeout 30s;
         proxy_send_timeout 30s;
